tests/machine/x/scala/cross_join_triple.scala
// Generated by Mochi compiler v0.10.27 on 1970-01-01T00:00:00Z
object cross_join_triple {
  case class Combo(n: Int, l: String, b: Boolean)

  def main(args: Array[String]): Unit = {
    val nums = List(1, 2)
    val letters = List("A", "B")
    val bools = List(true, false)
    val combos = for { n <- nums; l <- letters; b <- bools } yield Combo(n = n, l = l, b = b)
    println("--- Cross Join of three lists ---")
    for(c <- combos) {
      println(s"${c.n} ${c.l} ${c.b}")
    }
  }
}
